; ModuleID = '/home/carl/AnghaBench/kphp-kdb/filesys/extr_filesys-data.c_free_inode.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/filesys/extr_filesys-data.c_free_inode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.filesys_inode = type { i32*, i64 }

@tot_inodes = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.filesys_inode*)* @free_inode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_inode(%struct.filesys_inode* %0) #0 {
  %2 = alloca %struct.filesys_inode*, align 8
  store %struct.filesys_inode* %0, %struct.filesys_inode** %2, align 8
  %3 = load %struct.filesys_inode*, %struct.filesys_inode** %2, align 8
  %4 = getelementptr inbounds %struct.filesys_inode, %struct.filesys_inode* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load %struct.filesys_inode*, %struct.filesys_inode** %2, align 8
  %9 = call i32 @filesys_inode_unload(%struct.filesys_inode* %8)
  br label %10

10:                                               ; preds = %7, %1
  %11 = load %struct.filesys_inode*, %struct.filesys_inode** %2, align 8
  %12 = getelementptr inbounds %struct.filesys_inode, %struct.filesys_inode* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = call i32 @free_tree(i32* %13)
  %15 = load %struct.filesys_inode*, %struct.filesys_inode** %2, align 8
  %16 = getelementptr inbounds %struct.filesys_inode, %struct.filesys_inode* %15, i32 0, i32 0
  store i32* null, i32** %16, align 8
  %17 = load i32, i32* @tot_inodes, align 4
  %18 = add nsw i32 %17, -1
  store i32 %18, i32* @tot_inodes, align 4
  %19 = load %struct.filesys_inode*, %struct.filesys_inode** %2, align 8
  %20 = call i32 @zfree(%struct.filesys_inode* %19, i32 16)
  ret void
}

declare dso_local i32 @filesys_inode_unload(%struct.filesys_inode*) #1

declare dso_local i32 @free_tree(i32*) #1

declare dso_local i32 @zfree(%struct.filesys_inode*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
